# cosmos-serving

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  aggregate.py  analyze_traces.py  pyproject.toml  run_configuration.py  run_matrix.py  run_multigpu.py  run_robolab.py  specification.md  specification_revised.md  specification_revised.txt
bench/: __init__.py  ablation.py  aiperf.py  drivers.py  eager.py  equivalence.py  fa2_probe.py  plots.py  roofline.py  serving.py  stages.py  sweep.py  verify_processor.py  workload.py
config/: experiment.yaml  robolab_tasks.yaml
cosmos_serving.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: Dockerfile  Dockerfile.serve  Dockerfile.vllm  RUNBOOK.md  feasibility_omni.sh  feasibility_rungs.sh  install_npa.sh  profile_and_upload.sh  robolab_smoke.sh  run_job.sh  run_robolab_job.sh  serve_e0_vm.sh  serve_endpoint.sh  serve_launch.py  setup.sh  setup_gpu.sh  versions.env
jobs/: README.md  aggregate-local.sh  deploy-optimized.sh  job1-ablation-matrix.sky.yaml  job1b-multigpu.sky.yaml  job2-production-validation.sky.yaml  job2b-production-multigpu.sky.yaml  job3-robolab-subset.sky.yaml  job4-robolab-full.sky.yaml  job5-aggregate.sky.yaml  with-env.sh
optimize/: __init__.py  cli.py  registry.py
optimize/techniques/: __init__.py  cfg_parallel.py  context_parallel.py  kv_cache.py
policy/: __init__.py  aggregate.py  capture.py  compat.py  config.py  configs.py  dataset.py  experiment.py  logs.py  matrix.py  measure.py  multigpu.py  pipeline.py  plots.py  profile_pytorch.py  pytorch_engine.py  robolab.py  robolab_runner.py  runner.py  serving.py
policy/mock/: __init__.py  engine.py  manifest.json  replay.py  robolab.py
results/: generator_ablation.json  generator_ablation_full.json  generator_ablation_full_v1.json  generator_ablation_v1.json  generator_batching.json  matrix_status.json  reasoner_ablation.json  reasoner_ablation_full.json  reasoner_sweep.json  reasoner_sweep_v1.json
results-real/: matrix_status.json
results-real/G0/: G0.jsonl  environment.json  status.json  summary.json  system-info.json
results-real/G1/: G1.jsonl  environment.json  status.json  summary.json  system-info.json
results-real/G2/: G2.jsonl  environment.json  status.json  summary.json  system-info.json
results-real/R0/: R0.jsonl  environment.json  status.json  summary.json  system-info.json
results-real/R1/: R1.jsonl  environment.json  status.json  summary.json  system-info.json
results-real/R2/: R2.jsonl  environment.json  status.json  summary.json  system-info.json
results-real/R3/: R3.jsonl  environment.json  status.json  summary.json  system-info.json
results/E6/: E6.jsonl  environment.json  status.json  summary.json  system-info.json
results/_archive_old_framing/: reasoner_ablation_full.json
results/aggregate/: aggregate_manifest.json  multigpu.json  quality_comparison.json  robolab_subset.json  stage_breakdown.json  summary.csv  waterfall_end_to_end.json  waterfall_generator.json  waterfall_reasoner.json
tests/: test_harness.py  test_policy.py
workbench/: README.md  optimized-deploy.config.yaml  policy-droid.config.yaml
workflows/: cosmos3-optimize.yaml
