[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Only `policy` (+ subpackages) is an importable package; jobs/deploy/config/results/workbench
# are not. Declaring this lets `uv pip install -e .` work (e.g. into cosmos-framework's env for
# the native PyTorch backend) without setuptools' flat-layout auto-discovery erroring. The
# top-level run_*.py stay as scripts, run from the repo root.
[tool.setuptools.packages.find]
include = ["policy*"]

[project]
name = "cosmos-serving"
version = "0.2.0"
description = "Cosmos3-Nano-Policy-DROID serving: per-stage latency attribution + optimization waterfalls (PyTorch ablation + vLLM/vLLM-Omni production), RoboLab-gated."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Aggregation extras (Job 5): Parquet summaries need pandas + pyarrow. CSV/JSON always work
# without them; the aggregator degrades gracefully (writes CSV, skips Parquet) when absent.
aggregate = [
    "pandas>=2.0",
    "pyarrow>=15.0",
]
# GPU / real backend — supplied by the pinned H100 serving image, not installed locally
# by this project (see deploy/versions.env and jobs/job2-production-validation.sky.yaml).
# torch, vllm, vllm-omni are environment-specific; install on-box, not via this extra.
gpu = [
    "mlflow>=2.14",
]
# Real DROID capture (policy/capture.py) — reads the open DROID RLDS tfrecords over gs://.
# Box-only + heavy: both tensorflow-cpu and tensorflow-datasets' array_record dep ship
# Linux-only wheels, so gate to Linux (capture runs on the GPU box, never on macOS dev).
# Install on-box with:  uv sync --extra capture
capture = [
    "tensorflow-datasets>=4.9; sys_platform == 'linux'",
    "tensorflow-cpu>=2.16; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
# Flat app layout (policy/ package + top-level run_*.py importable via cwd); don't build/install.
package = false

[tool.pytest.ini_options]
pythonpath = ["."]     # flat layout: put repo root on sys.path so `import bench` works
testpaths = ["tests"]
